--- a/index.html
+++ b/index.html
@@ -155,35 +155,35 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="/profile-1.jpeg" alt="">
+                        <img src="profile-1.jpeg" alt="">
                         <div class="text">ATHARV DIGHE</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/profile-2.jpeg" alt="">
+                        <img src="profile-2.jpeg" alt="">
                         <div class="text">APOORV JAIN</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/profile-3.jpeg" alt="">
+                        <img src="profile-3.jpeg" alt="">
                         <div class="text">XYZ</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/profile-4.jpeg" alt="">
+                        <img src="profile-4.jpeg" alt="">
                         <div class="text">YZX</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="/profile-5.jpeg" alt="">
+                        <img src="profile-5.jpeg" alt="">
                         <div class="text">ZXY</div>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
